# MPC_designations

./: .gitignore  CLAUDE_NOTES.md  CONTRIBUTING.md  ERROR_CHECKING.md  Makefile  README.md  mpc_designation.c  mpc_designation.py  mpc_designation.tcl  mpc_designation_cli.c  test_csv.c  test_csv.py  test_csv.tcl  test_errors.c  test_errors.py  test_errors.tcl  test_timing.tcl
.github/workflows/: test.yml
awk/: Makefile  README.md
awk/src/: mpc_designation.awk  mpc_designation_cli.sh  mpc_designation_main.awk
awk/test/: test_csv.awk  test_csv.sh  test_errors.sh  test_helpers.awk  test_roundtrip.awk  test_roundtrip.sh
bash/: Makefile  README.md
bash/src/: mpc_designation.sh
bash/test/: test_csv.sh  test_errors.sh  test_helpers.sh  test_roundtrip.sh
c/: CMakeLists.txt  Makefile  README.md
c/examples/: example_usage.c
c/examples/mariadb_udf/: Makefile  README.md  mpc_designation_udf.c
c/src/: mpc_designation.c  mpc_designation.h  mpc_designation_lite.h
c/test/: test_csv.c  test_errors.c  test_fragments.c  test_helpers.c  test_roundtrip.c
cpp/: Makefile  README.md
cpp/src/: mpc_designation.cpp  mpc_designation.hpp  mpc_designation_cli.cpp
cpp/test/: test_csv.cpp  test_errors.cpp  test_helpers.cpp  test_roundtrip.cpp
csharp/: Makefile  MpcDesignation.csproj  README.md
csharp/src/: MPCDesignation.cs  Program.cs
csharp/test/: TestCsv.cs  TestCsv.csproj  TestErrors.cs  TestErrors.csproj  TestHelpers.cs  TestHelpers.csproj  TestRoundtrip.cs  TestRoundtrip.csproj
docs/: COMPLETE_DESIGNATION_REFERENCE.md  DATABASE_INTEGRATION.md  FORMATS.md  MULTIPLATFORM.md  PRODUCTION_READINESS_NOTES.md  SPECIFICATION.md
forth/: Makefile  README.md  test_verbose.fs
forth/src/: GFORTH_NOTES.txt  mpc_designation.fs  mpc_designation_cli.fs
forth/test/: test_csv.fs  test_errors.fs  test_helpers.fs
fortran/: Makefile  README.md
fortran/src/: mpc_designation.f90  mpc_designation_cli.f90
fortran/test/: test_csv.f90  test_errors.f90  test_helpers.f90  test_roundtrip.f90
go/: Makefile  README.md  go.mod
go/mpc/: mpc_designation.go
haskell/: .gitignore  Makefile  README.md
haskell/src/: MPCDesignation.hs  Main.hs
haskell/test/: TestCsv.hs  TestErrors.hs  TestHelpers.hs  TestRoundtrip.hs
java/: Makefile  README.md
java/test/: TestCSV.java  TestErrors.java  TestHelpers.java  TestRoundtrip.java
js/: Makefile  README.md  package.json
js/src/: mpc_designation.js  mpc_designation_cli.js
js/test/: test_csv.js  test_errors.js  test_helpers.js  test_roundtrip.js
julia/: Makefile  README.md
julia/src/: MPCDesignation.jl  mpc_designation_cli.jl
julia/test/: test_csv.jl  test_errors.jl  test_helpers.jl  test_roundtrip.jl
kotlin/: Makefile  README.md
kotlin/test/: TestCsv.kt  TestErrors.kt  TestHelpers.kt  TestRoundtrip.kt
nim/: .gitignore  Makefile  README.md
nim/src/: mpc_designation.nim
nim/test/: test_csv.nim  test_errors.nim  test_helpers.nim  test_roundtrip.nim
octave/: Makefile  README.md
octave/src/: mpc_designation.m  mpc_designation_cli.m
octave/test/: test_csv.m  test_errors.m  test_helpers.m  test_quick.m
perl/: README.md
perl/src/: mpc_designation.pl
perl/test/: test_csv.pl  test_errors.pl  test_helpers.pl  test_roundtrip.pl
php/: Makefile  README.md
php/src/: MPCDesignation.php  mpc_designation_cli.php
php/test/: test_csv.php  test_errors.php  test_helpers.php  test_roundtrip.php
python/: README.md  benchmark.py  benchmark_results.txt  benchmark_results_baseline.txt  pyproject.toml
python/examples/: example_usage.py  sqlite_integration.py
python/src/mpc_designation/: __init__.py  batch.py  lite.py  mpc_designation.py
python/test/: test_csv.py  test_errors.py  test_fragments.py  test_helpers.py  test_roundtrip.py
r/: Makefile  README.md
ruby/: Makefile  README.md
rust/: Cargo.toml  Makefile  README.md
rust/src/: lib.rs
scripts/: benchmark.sh  chain_test.py  validate_consistency.sh
spp/: .gitignore  ARCHITECTURE.txt  README.md  example_usage.x
swift/: Makefile  README.md
tcl/: README.md
test-data/: INTEROPERABILITY_REPORT.txt  README.md  error_test_cases.csv  interop_test.py
typescript/: Makefile  README.md  package-lock.json  package.json  tsconfig.json
(+57 files in other folders)
