[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpc-designation"
version = "1.0.0"
description = "Convert between packed and unpacked MPC (Minor Planet Center) designations"
readme = "README.md"
license = {text = "Public Domain"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["astronomy", "minor planet", "asteroid", "comet", "MPC"]

[project.urls]
Homepage = "https://github.com/rlseaman/MPC_designations"
Documentation = "https://github.com/rlseaman/MPC_designations#readme"
Repository = "https://github.com/rlseaman/MPC_designations.git"

[project.scripts]
mpc-designation = "mpc_designation.mpc_designation:main"

[tool.setuptools.packages.find]
where = ["src"]
