[package]
name = "mpc_designation"
version = "1.0.0"
edition = "2021"
authors = ["MPC Designations Contributors"]
description = "Convert between packed and unpacked MPC (Minor Planet Center) designations"
license = "CC0-1.0"
repository = "https://github.com/rlseaman/MPC_designations"
keywords = ["astronomy", "minor-planet", "mpc", "asteroid", "comet"]
categories = ["science", "command-line-utilities"]

[lib]
name = "mpc_designation"
path = "src/lib.rs"

[[bin]]
name = "mpc_designation"
path = "src/bin/mpc_designation.rs"

[[bin]]
name = "test_csv"
path = "src/bin/test_csv.rs"

[[bin]]
name = "test_roundtrip"
path = "src/bin/test_roundtrip.rs"

[[bin]]
name = "test_errors"
path = "src/bin/test_errors.rs"

[dependencies]
regex = "1"
lazy_static = "1"

[profile.release]
opt-level = 3
lto = true
